Fixed overflow dashboard

--- a/src/main/resources/static/css/design.css
+++ b/src/main/resources/static/css/design.css
@@ -264,6 +264,6 @@ margin: 3px;
     width: 258px;
 }
 #min-body-height{
-    min-height: 100vh;
+    min-height: 50vh;
 }
 
